--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 ####       boot.wired.rocks initial loader        ####
 
 set conn_type https
-chain --autofree https://boot.wired.rocks/boot.ipxe || echo HTTPS failed... attempting HTTP...
+chain --autofree https://nejahbn.github.io/boot.ipxe || echo HTTPS failed... attempting HTTP...
 set conn_type http
-chain --autofree http://boot.wired.rocks/boot.ipxe || echo HTTP failed, localbooting...
+chain --autofree http://nejahbn.github.io/boot.ipxe || echo HTTP failed, localbooting...
 exit
 
 <!DOCTYPE html>
